# e-boost

./: .gitignore  Cargo.toml  Makefile  README.md  rewrite_json.py  setup.sh
E-syn2/: Makefile  process_test.sh  run_test.sh
E-syn2/data_process_script/: deal_csv.py
E-syn2/e-rewriter/: Cargo.toml  circuit1.eqn
E-syn2/e-rewriter/src/utils/: cost.rs  extract_new.rs  preprocess.rs  runner_modified.rs
E-syn2/extraction-gym/: process_out_json.py  test.py
E-syn2/extraction-gym/src/: main.rs
E-syn2/extraction-gym/src/extract/: faster_bottom_up.rs
E-syn2/test/: mul3.eqn  mul5.eqn
benchmark/E-syn/: c2670.json  qdiv.json
benchmark/SmootheE/: fir_8_tap_7iteration_egraph.json  vector_2d_conv_2x2_2x2_root_36.json
cplex/: main.cpp
cpsat/: aaa.txt  cpsat  main.cpp
cpsat/include/: egraph_serialize.hpp
egg/src/: language.rs  lib.rs
egraph-serialize/: Cargo.toml
egraph-serialize/src/: algorithms.rs  lib.rs
extraction_gym/: Cargo.toml
extraction_gym/src/: bottom_up.rs  copy  faster_ast_depth.rs  faster_ast_depth_mt.rs  faster_bottom_up.rs  faster_bottom_up_mt.rs  faster_greedy_dag.rs  faster_greedy_dag_fa.rs  faster_greedy_dag_fa_mt.rs  faster_greedy_dag_mt1.rs  faster_greedy_dag_mt2.rs  faster_ilp_cbc.rs  global_greedy_dag.rs  greedy_dag.rs  ilp_cbc.rs  lib.rs  main.rs  my_ilp.rs
extraction_gym_cpp/: main.cpp
extraction_gym_cpp/include/: egraph_serialize.hpp  extractor.hpp  faster_greedy_dag.cu  faster_greedy_dag.hpp
gurobi/: main.cpp
src/: extractor.rs  ilp_gen.rs  main.rs
