[package]
name = "extraction_tool"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
opt-level = 3

[dependencies]
egg = { path = "egg", features = ["serde-1"] }
egraph_serialize={path="egraph-serialize"}
extraction_gym = {path="extraction_gym"}
indexmap = "2.7.0"
anyhow = "1.0.71"
serde = { version = "1.0.137", features = ["derive"]}
serde_json = { version = "1.0.81"}
linked-hash-map = "0.5"
rand = "0.8"
ordered-float = "3"
regex = "1.7"
rustc-hash = "2.0.0"
quick-xml = "0.23"
wait-timeout = "0.2"