[package]
edition = "2021"
name = "extraction_gym"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ilp-cbc = ["coin_cbc"]

[dependencies]
env_logger = { version = "0.10.0", default-features = false }
indexmap = "2.0.0"
log = "0.4.19"
ordered-float = "3"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
rand = "0.8.5"
walkdir = "2.4.0"
anyhow = "1.0.71"
coin_cbc = { version = "0.1.6", optional = true }
im-rc = "15.1.0"
rustc-hash = "2.0.0"
serde_json = "1.0"
rpds = "1.1.0"
egraph_serialize={path="../egraph-serialize"}
rayon = "1.5"
dashmap = "6.1.0"
crossbeam-queue = "0.3"
flurry = "0.5.1"
arc-swap = "1.7"
crossbeam = "0.8"
threadpool = "1.8.1"

[profile.release]
debug = true
